Fixed collapsing height of code-preview
...also removed padding

--- a/resources/sass/components.codeWindow.scss
+++ b/resources/sass/components.codeWindow.scss
@@ -2,9 +2,6 @@
 // Code Window Base --------- //
 
 @import '~prismjs/themes/prism-okaidia.css';
-pre[class*="language-"] {
-  background: var(--brandMain, $c-brandMain);
-}
 
 .code {
 
@@ -81,11 +78,18 @@ pre[class*="language-"] {
 	.tab {
 		@include size(100%);
 		border: 0;
+		display: flex;
 		left: 0;
 		padding: 0;
 		position: absolute;	
 		top: 0;
 	}
 
+}
+
+pre[class*="language-"] {
+  background: var(--brandMain, $c-brandMain);
+  padding: 0;
+  width: 100%;
 }
 
